pobieranie kategorii wraz z itemem

--- a/WarechouseInterface/Pages/WarechouseViewerPage.xaml
+++ b/WarechouseInterface/Pages/WarechouseViewerPage.xaml
@@ -25,6 +25,14 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
+                <DataGridTemplateColumn Width ="*" Header="Kategoria" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Category}"></Label>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
                 <DataGridTemplateColumn Width ="*" Header="Nazwa" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
