--- a/WarechouseInterface/Pages/SettingsPage.xaml
+++ b/WarechouseInterface/Pages/SettingsPage.xaml
@@ -4,10 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WarechouseInterface.Pages"
+        BorderBrush="Black"
+        BorderThickness="4"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         Title="SettingsPage" Height="200" Width="150">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
@@ -16,5 +22,6 @@
         <Button Grid.Row="0" Margin="10" Content="Główny Widok" Click="Button_Click"/>
         <Button Grid.Row="1" Margin="10" Content="Ustawienia Hasła"/>
         <Button Grid.Row="2" Margin="10" Content="Wybór Magazynu"/>
+        <Button Name="CloseAppButton" Grid.Row="3" Margin="10" Content="ZamknijAplikację" Click="CloseAppButton_Click"/>
     </Grid>
 </Window>
