--- a/WarechouseInterface/Pages/SearchItemPage.xaml
+++ b/WarechouseInterface/Pages/SearchItemPage.xaml
@@ -1,16 +1,14 @@
-﻿<Window x:Class="WarechouseInterface.Pages.WarechouseViewerPage"
+﻿<Window x:Class="WarechouseInterface.Pages.SearchItemPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WarechouseInterface.Pages"
-        BorderBrush="Black"
+         BorderBrush="Black"
         BorderThickness="4"
-        WindowState="Maximized"
         ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="WarechouseViewerPage" Height="450" Width="800">
+        Title="" Height="450" Width="800">
 
     <Window.Resources>
         <Style x:Key="CenterGridHeaderStyle" TargetType="DataGridColumnHeader">
@@ -32,7 +30,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+        <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -50,8 +48,6 @@
             <TextBox Grid.Row="2" Grid.Column="0" Name="CategoryTextBox" Height="20" Width="Auto" Margin="10" TextChanged="CategoryTextBox_TextChanged"/>
             <TextBox Grid.Row="2" Grid.Column="1" Name="NameTextBox" Height="20" Width="Auto" Margin="10" TextChanged="NameTextBox_TextChanged"/>
         </Grid>
-
-        <Button Grid.Row="0" Grid.Column="2" Name="AddButton" Height="30" Width="Auto" Margin="20" Content="Dodaj Produkt" Click="AddButton_Click"/>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="5">
             <ScrollViewer>
@@ -106,22 +102,12 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTemplateColumn Width ="*">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Button Click="Edit_Click" CommandParameter="{Binding Path=Id}" Width ="Auto">Edycja</Button>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-
                     </DataGrid.Columns>
                 </DataGrid>
             </ScrollViewer>
         </Grid>
-        <Button Grid.Row="2" Grid.Column="0" Name="BackButton" Content="Powrót" MinHeight="30" VerticalAlignment="Bottom" Click="BackButton_Click" Margin="10"/>
+        <Button Grid.Row="2" Grid.Column="0" Name="BackButton" Content="Powrót" MinHeight="30" VerticalAlignment="Bottom" Margin="10" Click="BackButton_Click"/>
 
-        <Button Grid.Row="2" Grid.Column="2" Name="ZamowienieButton" Content="Zamówienie" MinHeight="30" VerticalAlignment="Bottom"  Margin="10" Click="ZamowienieButton_Click"/>
-        <Button Grid.Row="2" Grid.Column="3" Name="DostawaButton" Content="Dostawa" MinHeight="30" VerticalAlignment="Bottom" Click="BackButton_Click" Margin="10"/>
-        <Button Grid.Row="2" Grid.Column="4" Name="ZwrotButton" Content="Zwrot" MinHeight="30" VerticalAlignment="Bottom" Click="BackButton_Click" Margin="10"/>
+        <Button Grid.Row="2" Grid.Column="4" Name="SelectItemButton" Content="Wybierz" MinHeight="30" VerticalAlignment="Bottom" Margin="10" Click="SelectItemButton_Click"/>
     </Grid>
 </Window>
