--- a/WarehouseInterface/Pages/CategorySettingPage.xaml
+++ b/WarehouseInterface/Pages/CategorySettingPage.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="WarehouseInterface.Pages.TransactionHistoryPage"
+﻿<Window x:Class="WarehouseInterface.Pages.CategorySettingPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WarehouseInterface.Pages"
 
          xmlns:u="clr-namespace:WarehouseInterface.Pages"
         u:WindowBehavior.HideCloseButton="True"
@@ -12,7 +13,7 @@
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         
-        Title="" Height="450" Width="800">
+        Title="" Height="450" Width="300">
 
     <Window.Resources>
         <Style x:Key="CenterGridHeaderStyle" TargetType="DataGridColumnHeader">
@@ -22,6 +23,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*" MinHeight="50"/>
             <RowDefinition Height="6*"/>
             <RowDefinition Height="1*" MinHeight="50"/>
         </Grid.RowDefinitions>
@@ -33,39 +35,29 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0" Grid.ColumnSpan="5">
+        <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Wyszukiwanie:" Height="20" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="1" Grid.Column="0" Name="CategoryTextBox" Height="20" Width="Auto" Margin="10" TextChanged="CategoryTextBox_TextChanged"/>
+
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.ColumnSpan="5">
             <ScrollViewer>
-                <DataGrid Name ="TestDataGrid" AutoGenerateColumns="False" CanUserResizeColumns="True" CanUserAddRows="false">
+                <DataGrid Name ="CategoryGrid" AutoGenerateColumns="False" CanUserResizeColumns="True" CanUserAddRows="false">
 
                     <DataGrid.Columns>
-                        <DataGridTemplateColumn Width ="*" Header="Data" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
+                        <DataGridTemplateColumn Width ="3*" Header="Nazwa" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Date}"></Label>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        
-                        <DataGridTemplateColumn Width ="*" Header="Typ" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Type}"></Label>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-
-                        <DataGridTemplateColumn Width ="*" Header="Opis" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Describe}"></Label>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-
-                        <DataGridTemplateColumn Width ="*" Header="Wartosc" HeaderStyle="{StaticResource CenterGridHeaderStyle}">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Worth}"></Label>
+                                    <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding Name}"></Label>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -73,7 +65,15 @@
                         <DataGridTemplateColumn Width ="*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Button Name="DetailsButton" CommandParameter="{Binding Path=Id}" Width ="Auto" Click="DetailsButton_Click">Szczegóły</Button>
+                                    <Button Name="EditCategoryButton" CommandParameter="{Binding Path=Id}" Width ="Auto" Click="EditCategoryButton_Click">Edytuj</Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+
+                        <DataGridTemplateColumn Width ="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Name="RemoveCategoryButton" CommandParameter="{Binding Path=Id}" Width ="Auto" Click="RemoveCategoryButton_Click">Usuń</Button>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -82,6 +82,8 @@
                 </DataGrid>
             </ScrollViewer>
         </Grid>
-        <Button Grid.Row="1" Grid.Column="0" Name="BackButton" Content="Powrót" MinHeight="30" VerticalAlignment="Bottom" Margin="10" Click="BackButton_Click"/>
+        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Name="BackButton" Content="Powrót" MinHeight="30" VerticalAlignment="Bottom" Margin="10" Click="BackButton_Click"/>
+
+        <Button Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Name="AddCategoryButton" Content="Dodaj Kategorię" MinHeight="30" VerticalAlignment="Bottom" Margin="10" Click="AddCategoryButton_Click"/>
     </Grid>
 </Window>
