--- a/WarehouseInterface/Pages/DetailsPage.xaml
+++ b/WarehouseInterface/Pages/DetailsPage.xaml
@@ -4,7 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WarehouseInterface.Pages"
+        
+        xmlns:u="clr-namespace:WarehouseInterface.Pages"
+        u:WindowBehavior.HideCloseButton="True"
+        
+        BorderBrush="Gray"
+        BorderThickness="4"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
+        
         Title="DetailsPage" Height="500" Width="550">
 
     <Window.Resources>
