--- a/WarehouseInterface/Pages/EditItemPage.xaml
+++ b/WarehouseInterface/Pages/EditItemPage.xaml
@@ -4,11 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WarehouseInterface.Pages"
-        BorderBrush="Black"
+       
+         xmlns:u="clr-namespace:WarehouseInterface.Pages"
+        u:WindowBehavior.HideCloseButton="True"
+        
+        BorderBrush="Gray"
         BorderThickness="4"
-        WindowStyle="SingleBorderWindow"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
+        
         Title="" Height="650" Width="530">
     
     <Window.Resources>
@@ -26,6 +30,14 @@
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="Margin" Value="20"/>
             <Setter Property="MinHeight" Value="30"/>
+        </Style>
+
+        <Style x:Key="ItemLargeTextBoxStyle" TargetType="TextBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="MinHeight" Value="30"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
         </Style>
     </Window.Resources>
 
@@ -79,13 +91,13 @@
                 <TextBox Grid.Row ="4" Grid.Column="2" Name="PriceTextBox"  Style="{StaticResource ItemTextBoxStyle}" PreviewTextInput="DecimalValidationTextBox"/>
 
                 <TextBlock Grid.Row ="5" Grid.Column="0" Text="Opis:" Style="{StaticResource ItemTextBlockStyle}"/>
-                <TextBox Grid.Row ="5" Grid.Column="2" Name="DescrieTextBox"  Style="{StaticResource ItemTextBoxStyle}"/>
+                <TextBox Grid.Row ="5" Grid.Column="2" Name="DescrieTextBox"  Style="{StaticResource ItemLargeTextBoxStyle}"/>
 
                 <TextBlock Grid.Row ="6" Grid.Column="0" Text="Lokalizacja:" Style="{StaticResource ItemTextBlockStyle}"/>
-                <TextBox Grid.Row ="6" Grid.Column="2" Name="LocationTextBox"  Style="{StaticResource ItemTextBoxStyle}"/>
+                <TextBox Grid.Row ="6" Grid.Column="2" Name="LocationTextBox"  Style="{StaticResource ItemLargeTextBoxStyle}"/>
 
                 <TextBlock Grid.Row ="7" Grid.Column="0" Text="Dodatkowe Infroamcje:" Style="{StaticResource ItemTextBlockStyle}"/>
-                <TextBox Grid.Row ="7" Grid.Column="2" Name="AdditionalInfoTextBox"  Style="{StaticResource ItemTextBoxStyle}"/>
+                <TextBox Grid.Row ="7" Grid.Column="2" Name="AdditionalInfoTextBox"  Style="{StaticResource ItemLargeTextBoxStyle}"/>
 
                 <TextBlock Grid.Row ="8" Grid.Column="0" Text="Alert Minimalnego Stanu:" Style="{StaticResource ItemTextBlockStyle}"/>
                 <TextBox Grid.Row ="8" Grid.Column="2" Name="MinAllertTextBox"  Style="{StaticResource ItemTextBoxStyle}" PreviewTextInput="NumberValidationTextBox"/>
