--- a/WarehouseInterface/Pages/SettingsPage.xaml
+++ b/WarehouseInterface/Pages/SettingsPage.xaml
@@ -3,16 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WarehouseInterface.Pages"
-        BorderBrush="Black"
+       
+        xmlns:u="clr-namespace:WarehouseInterface.Pages"
+        u:WindowBehavior.HideCloseButton="True"
+        
+        BorderBrush="Gray"
         BorderThickness="4"
-        WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="SettingsPage" Height="200" Width="150">
+        
+        Title="SettingsPage" Height="280" Width="180">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
@@ -20,8 +24,9 @@
         </Grid.RowDefinitions>
 
         <Button Grid.Row="0" Margin="10" Content="Główny Widok" Click="Button_Click"/>
-        <Button Grid.Row="1" Margin="10" Content="Ustawienia Hasła"/>
-        <Button Grid.Row="2" Margin="10" Content="Wybór Magazynu"/>
-        <Button Name="CloseAppButton" Grid.Row="3" Margin="10" Content="ZamknijAplikację" Click="CloseAppButton_Click"/>
+        <Button Name="CategorySettignsButton" Grid.Row="1" Margin="10" Content="Ustawienia Kategorii" Click="CategorySettignsButton_Click"/>
+        <Button Grid.Row="2" Margin="10" Content="Ustawienia Hasła"/>
+        <Button Grid.Row="3" Margin="10" Content="Wybór Magazynu"/>
+        <Button Name="CloseAppButton" Grid.Row="4" Margin="10" Content="Zamknij Aplikację" Click="CloseAppButton_Click"/>
     </Grid>
 </Window>
