--- a/WarehouseInterface/Pages/TransactionDetailsPage.xaml
+++ b/WarehouseInterface/Pages/TransactionDetailsPage.xaml
@@ -3,8 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WarehouseInterface.Pages"
+       
+         xmlns:u="clr-namespace:WarehouseInterface.Pages"
+        u:WindowBehavior.HideCloseButton="True"
+        
+        BorderBrush="Gray"
+        BorderThickness="4"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
+        
         Title="TransactionDetailsPage" Height="450" Width="800">
     <Grid>
         
