--- a/WarehouseInterface/Pages/WarehouseViewerPage.xaml
+++ b/WarehouseInterface/Pages/WarehouseViewerPage.xaml
@@ -4,13 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WarehouseInterface.Pages"
-        BorderBrush="Black"
+        
+        xmlns:u="clr-namespace:WarehouseInterface.Pages"
+        u:WindowBehavior.HideCloseButton="True"
+        
+        BorderBrush="Gray"
         BorderThickness="4"
-        WindowState="Maximized"
-        ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="WarehouseViewerPage" Height="450" Width="850">
+        
+        Title="WarehouseViewerPage" Height="480" Width="850">
 
     <Window.Resources>
         <Style x:Key="CenterGridHeaderStyle" TargetType="DataGridColumnHeader">
