--- a/WarehouseInterface/Pages/LoginPage.xaml
+++ b/WarehouseInterface/Pages/LoginPage.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WarehouseInterface.Pages.PageLogic"
        
          xmlns:u="clr-namespace:WarehouseInterface.Pages"
         u:WindowBehavior.HideCloseButton="True"
@@ -29,7 +28,15 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="1" Content="PODAJ HASŁO" FontSize="25" HorizontalAlignment="Center"/>
-        <PasswordBox Name ="PasswordBoxItem" Grid.Row="1" Grid.Column="1" Width="200" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" PreviewMouseLeftButtonDown="PasswordBoxItem_PreviewMouseLeftButtonDown" KeyDown="PasswordBoxItem_KeyDown"/>
+        <PasswordBox 
+            Name ="PasswordBoxItem" Grid.Row="1" 
+            Grid.Column="1" Width="200" 
+            Height="30" 
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            HorizontalContentAlignment="Center"
+            PreviewMouseLeftButtonDown="PasswordBoxItem_PreviewMouseLeftButtonDown" 
+            KeyDown="PasswordBoxItem_KeyDown"/>
         <Label Name ="MessageLabel" Content="" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" FontSize="15" HorizontalAlignment="Center" Foreground="Red"/>
         <Button Grid.Row="3" Grid.Column="0" Content="Zamknij" Height="Auto" Margin="10,10,10,10" Click="ExitButton_Click"/>
         <Button Grid.Row="3" Grid.Column="3" Content="Zaloguj" Height="30" Margin="10,10,10,10" Click="LoginButton_Click"/>
